1117060 - added umask setting to celery worker command line, since the default of 0 is unsafe.

--- a/server/usr/lib/systemd/system/pulp_resource_manager.service
+++ b/server/usr/lib/systemd/system/pulp_resource_manager.service
@@ -7,7 +7,7 @@ EnvironmentFile=/etc/default/pulp_resource_manager
 User=apache
 WorkingDirectory=/var/lib/pulp/celery/
 ExecStart=/usr/bin/celery worker -A pulp.server.async.app -n resource_manager@%%h\
-          -Q resource_manager -c 1 --events
+          -Q resource_manager -c 1 --events --umask 18
 
 [Install]
 WantedBy=multi-user.target
