1112904 - adding configuration for pulp ssl certificates

--- a/server/etc/pulp/server.conf
+++ b/server/etc/pulp/server.conf
@@ -77,18 +77,23 @@
 # Controls aspects of the Pulp web server security.
 #
 # For production installations, it is recommended that a new CA certificate be
-# generated for the signing of user and consumer certificates and configured
-# using the following properties.
+# generated for the signing of server's SSL as well as user and consumer certificates
+# and configured using the following properties.
 #
-# cacert: full path to the CA certificate that will be used to sign consumer
+# cacert: absolute path to the CA certificate that will be used to sign consumer
 #     and admin identification certificates; this must match the value of
 #     SSLCACertificateFile in /etc/httpd/conf.d/pulp.conf
 #
 # cakey: path to the private key for the above CA certificate
 #
-# ssl_ca_certificate: full path to the CA certificate used to sign the Pulp
+# ssl_ca_certificate: absolute path to the CA certificate used to sign the Pulp
 #     server's SSL certificate; consumers will use this to verify the
 #     Pulp server's SSL certificate during the SSL handshake
+#
+# ssl_certificate: absolute path to the Pulp server's SSL certificate; this must
+#     match the value of 'SSLCertificateFile' in /etc/httpd/conf.d/pulp.conf.
+#
+# ssl_certificate_key: absolute path to the private key for the above ssl certificate
 #
 # user_cert_expiration: number of days a user certificate is valid
 #
@@ -99,6 +104,8 @@
 # cacert: /etc/pki/pulp/ca.crt
 # cakey: /etc/pki/pulp/ca.key
 # ssl_ca_certificate: /etc/pki/pulp/ssl_ca.crt
+# ssl_certificate: /etc/pki/pulp/server.crt
+# ssl_certificate_key: /etc/pki/pulp/server.key
 # user_cert_expiration: 7
 # consumer_cert_expiration: 3650
 # serial_number_path: /var/lib/pulp/sn.dat
@@ -212,10 +219,10 @@
 # transport: The type of broker you are connecting to. May be "qpid" or "amqplib" (for RabbitMQ).
 #            Defaults to qpid.
 #
-# cacert: full path to PEM encoded CA certificate file, used when Pulp connects
+# cacert: absolute path to PEM encoded CA certificate file, used when Pulp connects
 #     to a broker over SSL
 #
-# clientcert: full path to PEM encoded file containing both the private key and
+# clientcert: absolute path to PEM encoded file containing both the private key and
 #     certificate Pulp should present to the broker to be authenticated
 #
 # auth_enabled:
