--- a/server/etc/pulp/server.conf
+++ b/server/etc/pulp/server.conf
@@ -103,7 +103,7 @@
 [security]
 # cacert: /etc/pki/pulp/ca.crt
 # cakey: /etc/pki/pulp/ca.key
-# ssl_ca_certificate: /etc/pki/pulp/ssl_ca.crt
+# ssl_ca_certificate: /etc/pki/pulp/ca.crt
 # ssl_certificate: /etc/pki/pulp/server.crt
 # ssl_certificate_key: /etc/pki/pulp/server.key
 # user_cert_expiration: 7
