Minor correction in the httpd conf comments

--- a/server/etc/httpd/conf.d/pulp_apache_22.conf
+++ b/server/etc/httpd/conf.d/pulp_apache_22.conf
@@ -19,7 +19,7 @@ AddType application/x-x509-ca-cert .crt
 # This MUST match /etc/pulp/server.conf [security] 'cacert'.
 SSLCACertificateFile /etc/pki/pulp/ca.crt
 
-# Pulp generated ssl cert and key files to get you started.
+# Pulp-generated ssl cert and key files to get you started.
 # These MUST match /etc/pulp/server.conf [security] 'ssl_certificate'
 # and 'ssl_certificate_key'.
 SSLCertificateFile /etc/pki/pulp/server.crt
