Moves inline docs to conf files and adds consumer.conf info.

--- a/client_consumer/etc/pulp/consumer/consumer.conf
+++ b/client_consumer/etc/pulp/consumer/consumer.conf
@@ -113,21 +113,26 @@ wrap_width = 80
 # Agent messaging.
 #
 # scheme:
-#   The broker URL scheme (tcp|ssl)
+#   The broker URL scheme. Either 'tcp' or 'ssl' can be used. The default is 'tcp'.
+#
 # host:
 #   The broker host (default: host defined in [server]).
+#
 # port:
-#   The broker port number.
+#   The broker port number. The default is 5672.
+#
 # transport:
-#   The AMQP transport name.
+#   The AMQP transport name. Valid options are 'qpid' or 'rabbitmq'. The default is 'qpid'.
+#
 # cacert:
-#   The (optional) CA certificate (PEM) to verify the server.
+#   The (optional) absolute path to a PEM encoded CA certificate to validate the identity of the
+#   broker.
+#
 # clientcert:
-#   The client (PEM) key & certificate used to connect to the broker.
-#   Uses the id_cert_dir and id_cert_filename when not defined here.
+#   The optional absolute path to PEM encoded key & certificate used to authenticate to the broker
+#   with. The id_cert_dir and id_cert_filename are used if this is not defined.
 
 [messaging]
-# (tcp|ssl)
 scheme = tcp
 host =
 port = 5672
