Fixes in response to PR review.

--- a/client_consumer/etc/pulp/consumer/consumer.conf
+++ b/client_consumer/etc/pulp/consumer/consumer.conf
@@ -12,8 +12,8 @@ host = localhost.localdomain
 port = 443
 api_prefix = /pulp/api
 rsa_pub = /etc/pki/pulp/consumer/server/rsa_pub.key
-# Set this to False to configure pulp-admin not to verify that the server's SSL cert is signed by a
-# trusted authority
+# Set this to False to configure pulp-consumer not to verify that the server's SSL cert is signed by
+# a trusted authority
 verify_ssl = True
 # This is a path to a directory of trusted CA certificates
 ca_path = '/etc/pki/tls/certs/'
