Fix unit tests.

--- a/client_admin/etc/pulp/admin/admin.conf
+++ b/client_admin/etc/pulp/admin/admin.conf
@@ -15,12 +15,12 @@
 #   This is a path to a directory of trusted CA certificates.
 
 [server]
-# host =
-# port = 443
-# api_prefix = /pulp/api
-# verify_ssl = True
-# ca_path = '/etc/pki/tls/certs/'
-# upload_chunk_size = 1048576
+# host:
+# port: 443
+# api_prefix: /pulp/api
+# verify_ssl: True
+# ca_path: '/etc/pki/tls/certs/'
+# upload_chunk_size: 1048576
 
 
 # Client settings.
@@ -28,7 +28,7 @@
 # role: The client role.
 
 [client]
-# role = admin
+# role: admin
 
 
 # The location of resources on the file system.
@@ -44,11 +44,10 @@
 #   Directory where status files for in progress uploads will be stored
 
 [filesystem]
-
-# extensions_dir = /usr/lib/pulp/admin/extensions
-# id_cert_dir = ~/.pulp
-# id_cert_filename = user-cert.pem
-# upload_working_dir = ~/.pulp/uploads
+# extensions_dir: /usr/lib/pulp/admin/extensions
+# id_cert_dir: ~/.pulp
+# id_cert_filename: user-cert.pem
+# upload_working_dir: ~/.pulp/uploads
 
 
 # Client logging.
@@ -59,9 +58,8 @@
 #   If present, the raw REST responses will be logged to the given file.
 
 [logging]
-
-# filename = ~/.pulp/admin.log
-# call_log_filename = ~/.pulp/server_calls.log
+# filename: ~/.pulp/admin.log
+# call_log_filename: ~/.pulp/server_calls.log
 
 
 # Admin client output.
@@ -78,7 +76,7 @@
 #   The number of characters written before wrapping to the next line.
 
 [output]
-# poll_frequency_in_seconds = 1
-# enable_color = true
-# wrap_to_terminal = false
-# wrap_width = 80
+# poll_frequency_in_seconds: 1
+# enable_color: true
+# wrap_to_terminal: false
+# wrap_width: 80
