--- a/client_consumer/etc/pulp/consumer/consumer.conf
+++ b/client_consumer/etc/pulp/consumer/consumer.conf
@@ -15,12 +15,12 @@
 #   This is a path to a directory of trusted CA certificates.
 
 [server]
-# host =
-# port = 443
-# api_prefix = /pulp/api
-# rsa_pub = /etc/pki/pulp/consumer/server/rsa_pub.key
-# verify_ssl = True
-# ca_path = '/etc/pki/tls/certs/'
+# host:
+# port: 443
+# api_prefix: /pulp/api
+# rsa_pub: /etc/pki/pulp/consumer/server/rsa_pub.key
+# verify_ssl: True
+# ca_path: '/etc/pki/tls/certs/'
 
 
 # Authentication
@@ -33,8 +33,8 @@
 #   The RSA public key used for authentication.
 
 [authentication]
-# rsa_key = /etc/pki/pulp/consumer/rsa.key
-# rsa_pub = /etc/pki/pulp/consumer/rsa_pub.key
+# rsa_key: /etc/pki/pulp/consumer/rsa.key
+# rsa_pub: /etc/pki/pulp/consumer/rsa_pub.key
 
 
 # Client settings.
@@ -42,7 +42,7 @@
 # role: The client role.
 
 [client]
-# role = consumer
+# role: consumer
 
 
 # The location of resources on the consumer file system.
@@ -66,13 +66,13 @@
 #   certificate. This file is downloaded and stored here during registration.
 
 [filesystem]
-# extensions_dir = /usr/lib/pulp/consumer/extensions
-# repo_file = /etc/yum.repos.d/pulp.repo
-# mirror_list_dir = /etc/yum.repos.d
-# gpg_keys_dir = /etc/pki/pulp-gpg-keys
-# cert_dir = /etc/pki/pulp/client/repo
-# id_cert_dir = /etc/pki/pulp/consumer/
-# id_cert_filename = consumer-cert.pem
+# extensions_dir: /usr/lib/pulp/consumer/extensions
+# repo_file: /etc/yum.repos.d/pulp.repo
+# mirror_list_dir: /etc/yum.repos.d
+# gpg_keys_dir: /etc/pki/pulp-gpg-keys
+# cert_dir: /etc/pki/pulp/client/repo
+# id_cert_dir: /etc/pki/pulp/consumer/
+# id_cert_filename: consumer-cert.pem
 
 
 # Reboot settings:
@@ -83,8 +83,8 @@
 #   The reboot delay (minutes).
 
 [reboot]
-# permit = False
-# delay = 3
+# permit: False
+# delay: 3
 
 
 # Client logging.
@@ -95,8 +95,8 @@
 #   If present, the raw REST responses will be logged to the given file.
 
 [logging]
-# filename = ~/.pulp/consumer.log
-# call_log_filename = ~/.pulp/consumer_server_calls.log
+# filename: ~/.pulp/consumer.log
+# call_log_filename: ~/.pulp/consumer_server_calls.log
 
 
 # Consumer client output.
@@ -113,10 +113,10 @@
 #   The number of characters written before wrapping to the next line.
 
 [output]
-# poll_frequency_in_seconds = 1
-# enable_color = true
-# wrap_to_terminal = false
-# wrap_width = 80
+# poll_frequency_in_seconds: 1
+# enable_color: true
+# wrap_to_terminal: false
+# wrap_width: 80
 
 
 # Agent messaging.
@@ -142,12 +142,12 @@
 #   with. The id_cert_dir and id_cert_filename are used if this is not defined.
 
 [messaging]
-# scheme = tcp
-# host =
-# port = 5672
-# transport = qpid
-# cacert =
-# clientcert =
+# scheme: amqp
+# host:
+# port: 5672
+# transport: qpid
+# cacert:
+# clientcert:
 
 
 # Profile reporting.
@@ -157,4 +157,4 @@
 #   The interval in minutes for reporting the installed content profiles.
 
 [profile]
-# minutes = 240
+# minutes: 240
