I was dumb and put quotes in our default config files.
Ooof.

--- a/client_consumer/etc/pulp/consumer/consumer.conf
+++ b/client_consumer/etc/pulp/consumer/consumer.conf
@@ -16,7 +16,7 @@ rsa_pub = /etc/pki/pulp/consumer/server/rsa_pub.key
 # a trusted authority
 verify_ssl = True
 # This is a path to a directory of trusted CA certificates
-ca_path = '/etc/pki/tls/certs/'
+ca_path = /etc/pki/tls/certs/
 
 
 # Authentication
