--- a/client_admin/etc/pulp/admin/admin.conf
+++ b/client_admin/etc/pulp/admin/admin.conf
@@ -6,7 +6,7 @@ api_prefix = /pulp/api
 # trusted authority
 verify_ssl = True
 # This is a path to a directory of trusted CA certificates
-ca_path = '/etc/pki/tls/certs/'
+ca_path = /etc/pki/tls/certs/
 
 # Maximum amount of data (in bytes) sent for an upload in a single request
 upload_chunk_size = 1048576
