1125030 - Handle both styles of certificate stores.

--- a/client_admin/etc/pulp/admin/admin.conf
+++ b/client_admin/etc/pulp/admin/admin.conf
@@ -5,8 +5,9 @@ api_prefix = /pulp/api
 # Set this to False to configure pulp-admin not to verify that the server's SSL cert is signed by a
 # trusted authority
 verify_ssl = True
-# This is a path to a directory of trusted CA certificates
-ca_path = /etc/pki/tls/certs/
+# This is a path to a file of concatenated trusted CA certificates, or to a directory of trusted CA
+# certificates (with openssl-style hashed symlinks, one certificate per file).
+ca_path = /etc/pki/tls/certs/ca-bundle.crt
 
 # Maximum amount of data (in bytes) sent for an upload in a single request
 upload_chunk_size = 1048576
