--- a/client_consumer/etc/pulp/consumer/consumer.conf
+++ b/client_consumer/etc/pulp/consumer/consumer.conf
@@ -15,8 +15,9 @@ rsa_pub = /etc/pki/pulp/consumer/server/rsa_pub.key
 # Set this to False to configure pulp-consumer not to verify that the server's SSL cert is signed by
 # a trusted authority
 verify_ssl = True
-# This is a path to a directory of trusted CA certificates
-ca_path = /etc/pki/tls/certs/
+# This is a path to a file of concatenated trusted CA certificates, or to a directory of trusted CA
+# certificates (with openssl-style hashed symlinks, one certificate per file).
+ca_path = /etc/pki/tls/certs/ca-bundle.crt
 
 
 # Authentication
