Added some documentation for the new SSL settings.

--- a/client_consumer/etc/pulp/consumer/consumer.conf
+++ b/client_consumer/etc/pulp/consumer/consumer.conf
@@ -13,7 +13,11 @@ port = 443
 api_prefix = /pulp/api
 rsa_pub = /etc/pki/pulp/consumer/server/rsa_pub.key
 # Set this to False to configure pulp-consumer not to verify that the server's SSL cert is signed by
-# a trusted authority
+# a trusted authority.
+# WARNING: Setting this to False is not safe if you wish to use Pulp with real passwords or
+#          any other private information. It is strongly recommended to keep this set to True, and
+#          to use certificates that are signed by a trusted authority on the web server that serves
+#          Pulp.
 verify_ssl = True
 # This is a path to a file of concatenated trusted CA certificates, or to a directory of trusted CA
 # certificates (with openssl-style hashed symlinks, one certificate per file).
