--- a/client_admin/etc/pulp/admin/admin.conf
+++ b/client_admin/etc/pulp/admin/admin.conf
@@ -3,7 +3,11 @@ host = localhost.localdomain
 port = 443
 api_prefix = /pulp/api
 # Set this to False to configure pulp-admin not to verify that the server's SSL cert is signed by a
-# trusted authority
+# trusted authority.
+# WARNING: Setting this to False is not safe if you wish to use Pulp with real passwords or
+#          any other private information. It is strongly recommended to keep this set to True, and
+#          to use certificates that are signed by a trusted authority on the web server that serves
+#          Pulp.
 verify_ssl = True
 # This is a path to a file of concatenated trusted CA certificates, or to a directory of trusted CA
 # certificates (with openssl-style hashed symlinks, one certificate per file).
