--- a/nodes/common/etc/pulp/nodes.conf
+++ b/nodes/common/etc/pulp/nodes.conf
@@ -15,7 +15,11 @@
 #                    certificate per file).
 # node_certificate - The absolute path to the node SSL certificate
 # verify_ssl -       Set this to False to configure Nodes not to verify that the Pulp server's SSL
-#                    cert is signed by a trusted authority
+#                    cert is signed by a trusted authority.
+#                    WARNING: Setting this to False is not safe if you wish to use Pulp with real
+#                             passwords or any other private information. It is strongly recommended
+#                             to keep this set to True, and to use certificates that are signed by a
+#                             trusted authority on the web server that serves Pulp.
 
 [main]
 ca_path: /etc/pki/tls/certs/ca-bundle.crt
