--- a/playpen/deploy/config/sample_config.yml
+++ b/playpen/deploy/config/sample_config.yml
@@ -1,25 +1,20 @@
-# There are three expected parts to this configuration: The 'os1_credentials' dictionary
-# specifies the credentials to use when using OS1 to deploy the instances. The 'pulp_tester'
-# dictionary specifies configuration information for the machine that runs the integration
-# tests. The third part is the 'structure' dictionary, which is used to define machines and
-# their relationships
-
-# This is the expected structure of the os1_credentials dictionary. Note: if you have your
-# credentials in the enviroment variables used by Openstack, you do not need this dictionary.
-#os1_credentials:
-#    username: sample_username
-#    password: sample_password
-#    tenant_id: sample_tenant_id
-#    tenant_name: sample_tenant_name
-#    auth_url: http://sample_auth_url
-
-
+# This is a sample configuration file for deploying an environment. You can make
+# more than one of these configuration files and pass them all to the
+# 'deploy-environment.py' script. They will be overlayed in the order they are
+# passed in, so the last configuration file will override any duplicate option
+# found in any of the previous configuration files.
+#
 # Any key-value pair specified that is not one of the expected dictionaries is
 # treated as a default value and applied to the instances if they are missing
 # that value. Here, we define some default parameters for the instances. If
 # you want an instance to have a special value for any of these keys, specify
 # it in the instance declaration.
-#
+
+
+# ==============
+# Default Values 
+# ==============
+
 # Specify the repository to add to the instance and install Pulp from.
 repository: http://repos.fedorapeople.org/repos/pulp/pulp/beta/2.4
 
@@ -33,7 +28,7 @@ private_key: path/to/private/key
 # The distribution to use for the Pulp server and consumer. 'el6', 'fc20', etc.
 distribution: el7
 
-# The size (cpu, RAM, ephemeral disk space) for each instance. See OS1 for other options.
+# The size (cpu, RAM, disk space) for each instance. See OS1 for other options.
 flavor: m1.small
 
 # The Openstack security group to use. This tells Openstack what network traffic
@@ -44,10 +39,15 @@ security_group: pulp
 cloud_config: cloud-init/cloud-config.txt
 
 
+# ==================
+# Instance Structure
+# ==================
+#
 # The 'structure' dictionary defines the instances to set up, and their relationships.
 # A server instance should be at the root of this structure, and it can have a list of
 # child instances. These children can be consumers or, once supported, server nodes.
 # Each server node could itself have children.
+
 structure:
     instance_name: demo-el7-pulp-server
     role: server
@@ -61,10 +61,16 @@ structure:
 #         role: consumer
 #         distribution: el6
 
+
+# =========================
+# Integration Test Instance
+# =========================
+#
 # The 'pulp_tester' dictionary specifies configuration information for the machine 
 # that runs the integration tests. Currently, the automation team uses Fedora 20 to
 # run the tests. The tests require Fedora or RHEL7, and RHEL7 occasionally
 # hangs while running the tests.
+
 pulp_tester:
     distribution: fc20
     instance_name: pulp-tester
