Support defaulting when loading nodes.conf.

--- a/nodes/common/etc/pulp/nodes.conf
+++ b/nodes/common/etc/pulp/nodes.conf
@@ -22,16 +22,16 @@
 #                             trusted authority on the web server that serves Pulp.
 
 [main]
-ca_path: /etc/pki/tls/certs/ca-bundle.crt
-node_certificate: /etc/pki/pulp/nodes/node.crt
-verify_ssl: True
+# ca_path: /etc/pki/tls/certs/ca-bundle.crt
+# node_certificate: /etc/pki/pulp/nodes/node.crt
+# verify_ssl: True
 
 
 # The oauth configuration used to authenticate to this node
 # user_id - The pulp user ID
 
 [oauth]
-user_id: admin
+# user_id: admin
 
 
 # The oauth configuration used to authenticate to the parent node
@@ -40,6 +40,6 @@ user_id: admin
 # user_id - The pulp user ID
 
 [parent_oauth]
-key:
-secret:
-user_id: admin
+# key:
+# secret:
+# user_id: admin
