Updated the CI bash script and jenkins test machine names

--- a/playpen/deploy/config/jenkins/el7-config.yml
+++ b/playpen/deploy/config/jenkins/el7-config.yml
@@ -27,7 +27,7 @@ structure:
 # =========================
 pulp_tester:
     distribution: fc20
-    instance_name: pulp-tester
+    instance_name: jenkins-el7-pulp-tester
     role: tester
     os_name: Fedora
     os_version: 20
