Added the option to use different branches from the test suite repository

--- a/playpen/deploy/config/sample_config.yml
+++ b/playpen/deploy/config/sample_config.yml
@@ -80,4 +80,6 @@ pulp_tester:
     os_version: 20
     # The path to put the nosetests results
     tests_destination: nosetests.xml
+    # The git branch to use when running the tests
+    test_suite_branch: master
 
