Fixed an incorrect keyword argument for fabric and added docblocks

--- a/playpen/deploy/config/jenkins/el5-config.yml
+++ b/playpen/deploy/config/jenkins/el5-config.yml
@@ -1,10 +1,9 @@
 # ==============
 # Default Values 
 # ==============
-repository: http://repos.fedorapeople.org/repos/pulp/pulp/beta/2.4
+repository: https://repos.fedorapeople.org/repos/pulp/pulp/stable/2/
 keypair_name: pulp-ci-key
 private_key: id_rsa
-distribution: el6
 flavor: m1.small
 security_group: pulp
 cloud_config: cloud-init/cloud-config.txt
@@ -17,6 +16,7 @@ structure:
     instance_name: jenkins-el6-pulp-server
     role: server
     flavor: m1.medium
+    distribution: el6
     children:
         - instance_name: jenkins-el5-pulp-consumer
           distribution: el5
@@ -28,9 +28,9 @@ structure:
 # =========================
 pulp_tester:
     distribution: fc20
-    instance_name: jenkins-el6-pulp-tester
+    instance_name: jenkins-el5-pulp-tester
     role: tester
     os_name: Fedora
     os_version: 20
     tests_destination: test/el6.xml
-
+    test_suite_branch: pulp-2.4
