--- a/playpen/deploy/config/jenkins/el6-config.yml
+++ b/playpen/deploy/config/jenkins/el6-config.yml
@@ -1,7 +1,7 @@
 # ==============
 # Default Values 
 # ==============
-repository: http://repos.fedorapeople.org/repos/pulp/pulp/beta/2.4
+repository: https://repos.fedorapeople.org/repos/pulp/pulp/stable/2/
 keypair_name: pulp-ci-key
 private_key: id_rsa
 distribution: el6
@@ -32,4 +32,4 @@ pulp_tester:
     os_name: Fedora
     os_version: 20
     tests_destination: test/el6.xml
-
+    test_suite_branch: pulp-2.4
