--- a/server/usr/lib/systemd/system/pulp_workers.service
+++ b/server/usr/lib/systemd/system/pulp_workers.service
@@ -7,6 +7,7 @@ Type=oneshot
 RemainAfterExit=true
 ExecStart=/usr/libexec/pulp-manage-workers start
 ExecStop=/usr/libexec/pulp-manage-workers stop
+KillSignal=SIGQUIT
 
 [Install]
 WantedBy=multi-user.target
