1153344 - Allow Mongo connections over SSL.
https://bugzilla.redhat.com/show_bug.cgi?id=1153344

--- a/server/etc/pulp/server.conf
+++ b/server/etc/pulp/server.conf
@@ -11,28 +11,43 @@
 #
 # Controls the behavior of MongoDB under Pulp's usage.
 #
-# name: name of the database to use
-# seeds: comma-separated list of hostname:port of database replica seed hosts
-# operation_retries: number of retries on database operations to
-#     perform before giving up and reporting an error
-#
 # Authentication - If the username and the password keys have values provided,
 # the pulp server will attempt to authenticate to the MongoDB server.  The
 # username and password provided here will be used to authenticate with the
 # database specified in the name field.
 #
-# username: The user name to use for authenticating to the MongoDB server
-# password: The password to use for authenticating to the MongoDB server
-# replica_set: uncomment and set this value to the name of replica set configured
-#     in MongoDB, if one is in use
+# name:              name of the database to use
+# seeds:             comma-separated list of hostname:port of database replica seed hosts
+# operation_retries: number of retries on database operations to perform before giving up and
+#                    reporting an error (Deprecated in 2.4.1)
+# username:          The user name to use for authenticating to the MongoDB server
+# password:          The password to use for authenticating to the MongoDB server
+# replica_set:       uncomment and set this value to the name of replica set configured in MongoDB,
+#                    if one is in use
+# ssl:               If True, create the connection to the server using SSL.
+# ssl_keyfile:       A path to the private keyfile used to identify the local connection against
+#                    mongod. If included with the certfile then only the ssl_certfile is needed.
+# ssl_certfile:      The certificate file used to identify the local connection against mongod.
+# verify_ssl:        Specifies whether a certificate is required from the other side of the
+#                    connection, and whether it will be validated if provided. If it is true, then
+#                    the ssl_ca_certs parameter must point to a file of CA certificates used to
+#                    validate the connection.
+# ca_path:           The ca_certs file contains a set of concatenated “certification authority”
+#                    certificates, which are used to validate certificates passed from the other end
+#                    of the connection.
 
 [database]
 # name: pulp_database
 # seeds: localhost:27017
 # operation_retries: 2
-# username: admin
-# password: admin
-# replica_set: replica_set_name
+# username:
+# password:
+# replica_set:
+# ssl: false
+# ssl_keyfile:
+# ssl_certfile:
+# verify_ssl: false
+# ca_path: /etc/pki/tls/certs/ca-bundle.crt
 
 
 # = Server =
