1153344 - verify_ssl default to true.
https://bugzilla.redhat.com/show_bug.cgi?id=1153344

--- a/server/etc/pulp/server.conf
+++ b/server/etc/pulp/server.conf
@@ -46,7 +46,7 @@
 # ssl: false
 # ssl_keyfile:
 # ssl_certfile:
-# verify_ssl: false
+# verify_ssl: true
 # ca_path: /etc/pki/tls/certs/ca-bundle.crt
 
 
