1159067 - user cred from config
Allow pulp to read user credentials from users admin.conf
if he/she does not want to provide password on command prompt
or --password in pulp-admin

--- a/client_admin/etc/pulp/admin/admin.conf
+++ b/client_admin/etc/pulp/admin/admin.conf
@@ -85,3 +85,18 @@
 # enable_color: true
 # wrap_to_terminal: false
 # wrap_width: 80
+
+
+# Client authentication
+#
+# This enables the user to run pulp-admin commands without providing a username
+# and password using the command line
+#
+# username:
+#   pulp username
+# password:
+#   pulp user's password
+
+[auth]
+#username: admin
+#password: admin
