1161205 - Adds comments to conf files about value of defaults

--- a/nodes/common/etc/pulp/nodes.conf
+++ b/nodes/common/etc/pulp/nodes.conf
@@ -9,6 +9,9 @@
 # have received a copy of GPLv2 along with this software; if not, see
 # http://www.gnu.org/licenses/old-licenses/gpl-2.0.txt
 
+# The settings in this file are all commented by default, and the commented settings show the
+# default values that a Pulp Node will choose if not specified here.
+
 # The main node configuration
 # ca_path -          This is a path to a file of concatenated trusted CA certificates, or to a
 #                    directory of trusted CA certificates (with openssl-style hashed symlinks, one
