--- a/server/etc/pulp/server.conf
+++ b/server/etc/pulp/server.conf
@@ -2,8 +2,8 @@
 # Pulp Server Configuration
 # =========================
 
-# This settings in this file are all commented by default, and the commented settings show the
-# default values that Pulp will choose if not specified here.
+# The settings in this file are all commented by default, and the commented settings show the
+# default values that Pulp Server will choose if not specified here.
 
 # -- Common Configuration -----------------------------------------------------
 
