--- a/client_admin/etc/pulp/admin/admin.conf
+++ b/client_admin/etc/pulp/admin/admin.conf
@@ -1,3 +1,6 @@
+# The settings in this file are all commented by default, and the commented settings show the
+# default values that Pulp Admin will choose if not specified here.
+
 # The pulp server configuration
 #
 # host:
