RFE 1166565 - Implement Kerberos authentication

--- a/server/etc/httpd/conf.d/pulp_apache_22.conf
+++ b/server/etc/httpd/conf.d/pulp_apache_22.conf
@@ -80,3 +80,21 @@ Alias /pulp/static /var/lib/pulp/static
 #    AuthUserFile /var/lib/pulp/.htaccess
 #    Require valid-user
 #</Location>
+
+# The following configuration allows Pulp to authenticate users with Kerberos.
+# The KrbAuthRealm and Krb5Keytab variables need to be modified according to
+# your configuration.
+
+#<Location /pulp/api>
+#    AuthName "Pulp Login"
+#    AuthType Kerberos
+#    KrbMethodNegotiate on
+#    Require valid-user
+#    KrbServiceName Any
+#    KrbAuthRealm $MYREALM
+#    KrbVerifyKDC off
+#    KrbMethodK5Passwd on
+#    Krb5Keytab $MYKEYTABFILE
+#    KrbSaveCredentials on
+#    KrbLocalUserMapping On
+#</Location>
