Tweak some comments.

--- a/client_consumer/etc/pulp/consumer/consumer.conf
+++ b/client_consumer/etc/pulp/consumer/consumer.conf
@@ -4,7 +4,7 @@
 # The pulp server configuration
 #
 # host:
-#   The pulp server hostname.  If not specifiec, this value will default to socket.gethostname()
+#   The pulp server hostname.  If not specified, this value will default to socket.gethostname().
 # port:
 #   The port providing the RESTful API
 # rsa_pub:
