Adds local working directories for pulp workers
This patch adds ability to specify 'working_directory' setting in the
/etc/pulp/server.conf [server] section. The default value is
/var/cache/pulp. This patch also modifies the pulp-celery SELinux policy.
The spec file is also modified to create the default working directory when
the pulp-server rpm is installed. Pulp workers can now request a working
directory when performing tasks.  Each directory is removed after a task
enters a final state.

--- a/server/etc/pulp/server.conf
+++ b/server/etc/pulp/server.conf
@@ -60,6 +60,7 @@
 # debugging_mode:   boolean; toggles Pulp's debugging capabilities
 # log_level:        The desired logging level. Options are: CRITICAL, ERROR, WARNING, INFO, DEBUG,
 #                   and NOTSET. Pulp will default to INFO.
+# working_directory:path to where pulp workers can create working directories needed to complete tasks
 [server]
 # server_name: server_hostname
 # key_url: /pulp/gpg
@@ -68,6 +69,7 @@
 # default_password: admin
 # debugging_mode: false
 # log_level: INFO
+# working_directory: /var/cache/pulp
 
 
 # = Authentication =
