Added SELinux rules to restrict pid and tmp file management
This patch also adds back some lines of pulp.spec file that were
accidently removed in
https://github.com/pulp/pulp/commit/f4d2de05d58f71e9baccd18e0ce8020c3e80d6fb

--- a/server/usr/lib/systemd/system/pulp_resource_manager.service
+++ b/server/usr/lib/systemd/system/pulp_resource_manager.service
@@ -5,9 +5,9 @@ After=network.target
 [Service]
 EnvironmentFile=/etc/default/pulp_resource_manager
 User=apache
-WorkingDirectory=/var/lib/pulp/celery/
+WorkingDirectory=/var/run/pulp/
 ExecStart=/usr/bin/celery worker -A pulp.server.async.app -n resource_manager@%%h\
-          -Q resource_manager -c 1 --events --umask 18
+          -Q resource_manager -c 1 --events --umask 18 --pidfile=/var/run/pulp/resource_manager.pid
 
 [Install]
 WantedBy=multi-user.target
