--- a/server/usr/lib/systemd/system/pulp_workers.service
+++ b/server/usr/lib/systemd/system/pulp_workers.service
@@ -5,6 +5,7 @@ After=network.target
 [Service]
 Type=oneshot
 RemainAfterExit=true
+WorkingDirectory=/var/run/pulp/
 ExecStart=/usr/libexec/pulp-manage-workers start
 ExecStop=/usr/libexec/pulp-manage-workers stop
 
