set heartbeat interval to 30s
The heartbeat interval for celery was previously set to the default of 2
seconds. This caused the workers collection to be updated in mongo every two
seconds as well, even on an idle system.

Instead, set the heartbeat interval to 30 seconds. This should be sufficient
for worker status updates.

fixes #808

--- a/server/usr/lib/systemd/system/pulp_resource_manager.service
+++ b/server/usr/lib/systemd/system/pulp_resource_manager.service
@@ -7,7 +7,8 @@ EnvironmentFile=/etc/default/pulp_resource_manager
 User=apache
 WorkingDirectory=/var/run/pulp/
 ExecStart=/usr/bin/celery worker -A pulp.server.async.app -n resource_manager@%%h\
-          -Q resource_manager -c 1 --events --umask 18 --pidfile=/var/run/pulp/resource_manager.pid
+          -Q resource_manager -c 1 --events --umask 18 --pidfile=/var/run/pulp/resource_manager.pid\
+          --heartbeat-interval=30
 
 [Install]
 WantedBy=multi-user.target
