Update docs for task notification messages
The previous docs were not suitable for someone who wanted to integrate with
Pulp but was not already familiar with TaskStatus objects.

This patch adds some examples and further explanation on task notifications and
how to use them. It also adds some comments to server.conf about the new
options.

re #87

--- a/server/etc/pulp/server.conf
+++ b/server/etc/pulp/server.conf
@@ -258,6 +258,11 @@
 #     default is 'amq.topic', which is a default exchange that is guaranteed to exist on a Qpid
 #     broker. This setting is a string, and therefore includes the single quotes.
 #
+# event_notifications_enabled:
+#     Enables or disables Pulp event notfications on the message bus. Defaults to 'false'.
+#
+# event_notification_url:
+#     The AMQP URL for event notifications. Defaults to 'qpid://localhost:5672/'.
 
 [messaging]
 # url: tcp://localhost:5672
@@ -266,6 +271,8 @@
 # cacert: /etc/pki/qpid/ca/ca.crt
 # clientcert: /etc/pki/qpid/client/client.pem
 # topic_exchange: 'amq.topic'
+# event_notifications_enabled: false
+# event_notification_url: qpid://localhost:5672/
 
 
 # = Asynchronous Tasks =
