Set server_name to FQDN for default server config
The server_name and the CN in certificates generated by pulp-gen-ca-certificate is
the fully qualified domain name (FQDN).

https://pulp.plan.io/issues/926

fixes #926

More docs

--- a/server/etc/pulp/server.conf
+++ b/server/etc/pulp/server.conf
@@ -52,7 +52,8 @@
 # Controls general Pulp web server behavior.
 #
 # server_name:      hostname the admin client and consumers should use when accessing
-#                   the server; if not specified, this is defaulted to the server's hostname
+#                   the server; if not specified, this defaults to the server's fully qualified
+#                   domain name (FQDN)
 # default_login:    default admin username of the Pulp server; this user will be
 #                   the first time the server is started
 # default_password: default password for admin when it is first created; this
