better support for installing standalone repoauth
Previously, the pulp repoauth RPM was not installable without also installing
the rest of pulp-server. This was not ideal for instances that served protected
content to client systems, but did not run full Pulp installations.

This patch does the following:

 * moves an openssl lib from `pulp.server.common` to `pulp.repoauth`. Note that
   we couldn't move it to `pulp.common` since our openssl code has some calls to
   `subprocess` that do not work on Python 2.4.

 * adds a few deps to python-pulp-repoauth that previously were provided by
   pulp-server's deps

 * fixes an unrelated issue where a "real" conf file was used in a few unit
   tests

I confirmed that no plugins are using `pulp.server.common.*`.

Fixes #975

https://pulp.plan.io/issues/975

--- a/repoauth/test/data/test-override-repoauth.conf
+++ b/repoauth/test/data/test-override-repoauth.conf
@@ -1,12 +1,19 @@
 [main]
-enabled: true
+enabled: false
 log_failed_cert: true
-log_failed_cert_verbose: true
+log_failed_cert_verbose: false
+max_num_certs_in_chain: 100
+# If this is true, the client certificate will be verified by Pulp against the per-repo certificate
+# authorities. If it is false, client certificates will not be checked for signature or expiration.
+# If you don't need per-repo CAs, it is recommended to set this to false and use your web server to
+# check the client certificates against a trusted CA back. Setting this to true will have a negative
+# performance impact, so don't do that unless you need per-repo CAs. It is true by default to
+# maintain backwards compatibility.
+# verify_ssl: true
 
 [repos]
 cert_location: /tmp/test_oid_validation/
 global_cert_location: /tmp/test_oid_validation/
-protected_repo_listing_file: /tmp/etc/pki/content/pulp-protected-repos
+protected_repo_listing_file: /tmp/test-protected-repo-listing
 
-[crl]
-location: /etc/pki/pulp/content
+
