Add unit querying & association support required for plugin conversion to mongoengine
fixes #862

--- a/flake8.cfg
+++ b/flake8.cfg
@@ -1,5 +1,5 @@
 [flake8]
-exclude = ./docs/*
+exclude = ./docs/*, */build/*
 # E401: multiple imports on one line
 # W391: blank line at end of file (sadly, it will complain on empty __init__.py files)
 ignore = E401,W391
