Allow disabling specific repo auth plugins
Previously in Pulp 2.7, repo authenticator plugins were controlled only via the
plugin's entry points. This meant that if a plugin was installed by default, we
were not able to disable it.

A new config value has been added to repo_auth.conf to disable specific
plugins. This lets us turn plugins on and off at will, without having to
uninstall any default plugins.

fixes #1055

https://pulp.plan.io/issues/1055

--- a/server/etc/pulp/repo_auth.conf
+++ b/server/etc/pulp/repo_auth.conf
@@ -11,6 +11,10 @@ max_num_certs_in_chain: 100
 # maintain backwards compatibility.
 # verify_ssl: true
 
+# If set, this disables specific repo auth plugins. More than one plugin can be
+# specified in the form of "plugin1,plugin2,plugin3".
+# disabled_authenticators = oid_validation
+
 [repos]
 cert_location: /etc/pki/pulp/content
 global_cert_location: /etc/pki/pulp/content
