Install koji on the dev box.

--- a/playpen/ansible/roles/pulp_server/tasks/main.yml
+++ b/playpen/ansible/roles/pulp_server/tasks/main.yml
@@ -1,2 +1,8 @@
 ---
 - selinux: state=disabled
+
+- name: Install packages
+  dnf: name={{ item }} state=latest
+  with_items:
+      - koji
+      - tito
