--- a/playpen/ansible/playbook.yml
+++ b/playpen/ansible/playbook.yml
@@ -3,10 +3,10 @@
   sudo: true
   vars:
   roles:
-    - common
+    - core
 
 - hosts: dev
   sudo: true
   vars:
   roles:
-    - pulp_server
+    - dev
