--- a/server/usr/lib/systemd/system/pulp_workers.service
+++ b/server/usr/lib/systemd/system/pulp_workers.service
@@ -5,8 +5,8 @@ After=network.target
 [Service]
 Type=oneshot
 RemainAfterExit=true
-ExecStart=/usr/libexec/pulp-manage-workers start
-ExecStop=/usr/libexec/pulp-manage-workers stop
+ExecStart=/usr/bin/python -m  pulp.server.async.manage_workers start
+ExecStop=/usr/bin/python -m  pulp.server.async.manage_workers stop
 
 [Install]
 WantedBy=multi-user.target
