Install some useful development tools.
This commit adds dstat, fpaste, iotop, jnettop and python-ipdb to the
development environment.

--- a/playpen/ansible/roles/dev/tasks/main.yml
+++ b/playpen/ansible/roles/dev/tasks/main.yml
@@ -11,11 +11,16 @@
       line: "StrictModes no"
   notify: restart sshd
 
-- name: Install Fedora packages
+- name: Install packages
   dnf: name={{ item }} state=present
   with_items:
+      - dstat
+      - fpaste
+      - iotop
+      - jnettop
       - koji
       - python-django-bash-completion
+      - python-ipdb
       - python-virtualenvwrapper
       - redhat-lsb-core
       - rpm-build
