Adds login_method options to [tasks] section of server.conf
If login_method is set, the value is used to configure the
BROKER_LOGIN_METHOD Celery option. login_method defaults
to '' which allows Celery to use its default values.

This change includes docs updates on practical usage of the new
setting and a release note.

closes #1168
https://pulp.plan.io/issues/1168

--- a/server/etc/pulp/server.conf
+++ b/server/etc/pulp/server.conf
@@ -295,10 +295,8 @@
 # certfile: The absolute path to the PEM encoded certificate used for authentication to the message
 #     bus. The default value is '/etc/pki/pulp/qpid/client.crt'.
 #
-# broker_login_method: Select the login method used to connect to the broker. This should be left
-#     unset (use the broker default) except in special cases (e.g. do SSL client certificate
-#     authentication. For RabbitMQ with SSL client certificates, this needs to be 'EXTERNAL'.
-#
+# login_method: Select the SASL login method used to connect to the broker. This should be left
+#     unset except in special cases such as SSL client certificate authentication.
 
 [tasks]
 # broker_url: qpid://localhost/
@@ -306,6 +304,7 @@
 # cacert: /etc/pki/pulp/qpid/ca.crt
 # keyfile: /etc/pki/pulp/qpid/client.crt
 # certfile: /etc/pki/pulp/qpid/client.crt
+# login_method:
 
 
 # = Email =
