Rework the dev-setup.sh script to use Ansible.
This commit reworks the dev-setup.sh script to use the same code that
Vagrant uses to provision the dev box.

https://pulp.plan.io/issues/1137

fixes #1137

--- a/playpen/ansible/roles/core/tasks/main.yml
+++ b/playpen/ansible/roles/core/tasks/main.yml
@@ -3,7 +3,7 @@
   pulp_facts:
 
 - name: Install deltarpm
-  yum: name={{ item }} state=present
+  dnf: name={{ item }} state=present
   with_items:
       - deltarpm
 
