--- a/playpen/ansible/roles/dev/tasks/main.yml
+++ b/playpen/ansible/roles/dev/tasks/main.yml
@@ -37,4 +37,4 @@
   when: pulp_27_beta_repo_enabled == false
 
 - name: Install custom ~/.bashrc
-  copy: src=bashrc dest=/home/vagrant/.bashrc
+  copy: src=bashrc dest=/home/{{ ansible_env.SUDO_USER }}/.bashrc
