add vhost option to sample consumer configuration

--- a/client_consumer/etc/pulp/consumer/consumer.conf
+++ b/client_consumer/etc/pulp/consumer/consumer.conf
@@ -126,6 +126,9 @@
 # port:
 #   The broker port number. The default is 5672.
 #
+# vhost:
+#   The optional AMQP vhost name. The default is not to use AMQP vhosts.
+#
 # transport:
 #   The AMQP transport name. Valid options are 'qpid' or 'rabbitmq'. The default is 'qpid'.
 #
@@ -141,6 +144,7 @@
 # scheme: amqp
 # host:
 # port: 5672
+# vhost:
 # transport: qpid
 # cacert:
 # clientcert:
