Fix an undefined variable in the example Vagrantfile.

--- a/Vagrantfile.example
+++ b/Vagrantfile.example
@@ -10,7 +10,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
  config.vm.synced_folder ".", "/vagrant", type: "nfs", nfs_version: 4, nfs_udp: false
 
  # Comment this line if you would like to disable the automatic update during provisioning
- dev.vm.provision "shell", inline: "sudo dnf upgrade -y"
+ config.vm.provision "shell", inline: "sudo dnf upgrade -y"
 
  config.vm.provision "ansible" do |ansible|
      ansible.playbook = "playpen/ansible/vagrant-playbook.yml"
