Properly handles ['database']['seeds'] config
This patch enables pulp to iterate over a list of seeds until a connection
is made. When more than one seed is present, an exception is raised if no
'replica_set' config is specified. An exception is also raised if an empty
string is passed in as value for 'seeds'.

re #1012
https://pulp.plan.io/issues/1012

--- a/server/etc/pulp/server.conf
+++ b/server/etc/pulp/server.conf
@@ -16,6 +16,10 @@
 # username and password provided here will be used to authenticate with the
 # database specified in the name field.
 #
+# Replica Sets - If more than one seed is provided, a connection will be attempted to each seed
+# until a connection is made. When multiple seeds are provided, the 'replica_set' value must also
+# be specified.
+#
 # name:              name of the database to use
 # seeds:             comma-separated list of hostname:port of database replica seed hosts
 # username:          The user name to use for authenticating to the MongoDB server
