Introduce unsafe_autoretry setting
re #1

--- a/server/etc/pulp/server.conf
+++ b/server/etc/pulp/server.conf
@@ -33,6 +33,8 @@
 # ca_path:           The ca_certs file contains a set of concatenated “certification authority”
 #                    certificates, which are used to validate certificates passed from the other end
 #                    of the connection.
+# unsafe_autoretry:  If true, retry commands to the database if there is a connection error.
+#                    Warning: if set to true, this setting can result in duplicate records.
 
 [database]
 # name: pulp_database
@@ -45,6 +47,7 @@
 # ssl_certfile:
 # verify_ssl: true
 # ca_path: /etc/pki/tls/certs/ca-bundle.crt
+# unsafe_autoretry: false
 
 
 # = Server =
