ref #1180 - add lazy redirect view.

--- a/server/etc/pulp/server.conf
+++ b/server/etc/pulp/server.conf
@@ -337,3 +337,12 @@
 # port: 25
 # from: no-reply@your.domain
 # enabled: false
+
+# = Lazy =
+#
+# Settings for lazy content loading.
+#
+# redirect_url: A base URL to the content streamer.
+
+[lazy]
+# redirect_url:
