--- a/server/etc/pulp/server.conf
+++ b/server/etc/pulp/server.conf
@@ -345,6 +345,7 @@
 # from: no-reply@your.domain
 # enabled: false
 
+
 # = Lazy =
 #
 # Settings for lazy content loading.
@@ -367,3 +368,23 @@
 # redirect_host:
 # redirect_port:
 # redirect_path:
+
+
+# = Streamer =
+#
+# Manages settings for the streamer componenet of the lazy loading feature
+# for Pulp.
+#
+# port: the port that pulp_streamer listens on for incoming requests.
+#     This should match the port that Squid is configured to forward to.
+#
+# interfaces: comma-separated list; the interfaces that pulp-streamer
+#     listens on. These should be either host names or IP addresses.
+#
+# cache_timeout: integer; the length of time in seconds that the lazy
+#     loader should cache content for in seconds.
+
+[streamer]
+# port: 8751
+# interfaces: localhost
+# cache_timeout: 86400
