Adds support for write concern
Pulp now accepts a write concern for the MongoDB connection. All writes
to the database are now acknowledged. For replica sets, 'majority' or 'all'
members can be asked to acknowledge the write.

closes: #974
closes: #1139

--- a/server/etc/pulp/server.conf
+++ b/server/etc/pulp/server.conf
@@ -39,6 +39,11 @@
 #                    of the connection.
 # unsafe_autoretry:  If true, retry commands to the database if there is a connection error.
 #                    Warning: if set to true, this setting can result in duplicate records.
+# write_concern:     Write concern of 'majority' or 'all'. When 'all' is specified, 'w' is set to
+#                    number of seeds specified. For version of MongoDB < 2.6, replica_set must also
+#                    be specified. Please note that 'all' will cause Pulp to halt if any of the
+#                    replica set members is not available. 'majority' is used by default.
+
 
 [database]
 # name: pulp_database
@@ -52,6 +57,7 @@
 # verify_ssl: true
 # ca_path: /etc/pki/tls/certs/ca-bundle.crt
 # unsafe_autoretry: false
+# write_concern: majority
 
 
 # = Server =
