ref #1180 - add redirect view and url signing.

--- a/server/etc/pulp/server.conf
+++ b/server/etc/pulp/server.conf
@@ -337,3 +337,26 @@
 # port: 25
 # from: no-reply@your.domain
 # enabled: false
+
+# = Lazy =
+#
+# Settings for lazy content loading.
+#
+# enabled:
+#   This controls whether redirect is enabled
+#
+# redirect_host:
+#   The host FQDN or IP to which requests are redirected.
+#
+# redirect_port:
+#   The TCP port to which requests are redirected
+#
+# redirect_path:
+#   The base path to which requests are redirected
+#
+
+[lazy]
+# enabled: false
+# redirect_host:
+# redirect_port:
+# redirect_path:
