Create tasks to download lazy repository content.
This introduces two new tasks, one to download deferred content units,
and one to download a repository using the lazy catalog.

closes #1199

--- a/playpen/ansible/roles/lazy/files/squid.conf
+++ b/playpen/ansible/roles/lazy/files/squid.conf
@@ -41,7 +41,7 @@
  #                  server. 
  #
  #  * name: Unique name for the peer. Used to reference the peer in other directives.
- cache_peer localhost parent 8751 0 no-digest no-query originserver name=PulpStreamer
+ cache_peer 127.0.0.1 parent 8751 0 no-digest no-query originserver name=PulpStreamer
 
  # Allow all queries to be forwarded to the Pulp Streamer.
  cache_peer_access PulpStreamer allow all
