--- a/server/etc/pulp/server.conf
+++ b/server/etc/pulp/server.conf
@@ -368,9 +368,29 @@
 # redirect_path:
 #   The base path to which requests are redirected
 #
+# https_retrieval:
+#   boolean; controls whether Pulp uses HTTPS or HTTP to
+#   retrieve content from the streamer.
+#   WARNING: Setting this to 'false' is not safe if you wish
+#            to use Pulp to provide repository entitlement
+#            enforcement. It is strongly recommended to keep
+#            this set to 'true' and use certificates that are
+#            signed by a trusted authority on the web server
+#            that serves as the streamer reverse proxy.
+#
+# download_interval:
+#   The interval in minutes between checks for content cached
+#   by the Squid proxy.
+#
+# download_concurrency:
+#   The number of downloads to perform concurrently when
+#   downloading content from the Squid cache.
 
 [lazy]
 # enabled: false
 # redirect_host:
 # redirect_port:
 # redirect_path:
+# https_retrieval: true
+# download_interval: 30
+# download_concurrency: 5
