Add install_retries var and use for all package installs.
This should prevent provisioning from hanging when internet connections are unstable.

--- a/playpen/ansible/roles/dev/tasks/main.yml
+++ b/playpen/ansible/roles/dev/tasks/main.yml
@@ -22,6 +22,7 @@
 
 - name: Install packages
   dnf: name={{ item }} state=present
+  retries: "{{ install_retries }}"
   with_items:
       - git
       - dstat
