--- a/playpen/ansible/roles/core/tasks/main.yml
+++ b/playpen/ansible/roles/core/tasks/main.yml
@@ -4,6 +4,7 @@
 
 - name: Install packages
   dnf: name={{ item }} state=present
+  retries: "{{ install_retries }}"
   with_items:
       - bash-completion
       - vim-enhanced
