--- a/playpen/ansible/roles/db/tasks/main.yml
+++ b/playpen/ansible/roles/db/tasks/main.yml
@@ -1,6 +1,7 @@
 ---
 - name: Install packages
   dnf: name={{ item }} state=present
+  retries: "{{ install_retries }}"
   with_items:
       - mongodb
       - mongodb-server
