Add python2-rpdb to the development environment.

--- a/playpen/ansible/roles/dev/tasks/main.yml
+++ b/playpen/ansible/roles/dev/tasks/main.yml
@@ -62,6 +62,7 @@
       - python-setuptools
       - python-sphinx
       - python-virtualenvwrapper
+      - python2-rpdb
       - redhat-lsb-core
       - rpm-build
       - tito
